--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ Old/
 #source docx
 *.docx
 *.png
-Practical instructions Essentials Course Unsupervised Learning.pdf
+"Practical instructions Essentials Course Unsupervised Learning.pdf"
